src/ui/draw_blocks/snapshots/oxker__ui__draw_blocks__commands__tests__draw_blocks_commands_custom_colors_running.snap
---
source: src/ui/draw_blocks/commands.rs
expression: setup.terminal.backend()
---
"╭──────────╮"
"│▶ pause   │"
"│  restart │"
"│  stop    │"
"│  delete  │"
"╰──────────╯"
